--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content="Nikole Dixon">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Bear Ninja Hunter Game</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -107,4 +108,5 @@
     </script>
 
   </body>
+
 </html>
